Fix text block spacing

--- a/assets/base.css
+++ b/assets/base.css
@@ -3102,3 +3102,7 @@ details-disclosure > details {
   .product-size-label:hover {
     border: var(--variant-pills-border-width) solid rgba(var(--color-foreground), var(--variant-pills-border-opacity));
   }
+
+  .text-block p {
+    margin: 0!Important;
+  }
